--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <link href="css/modules.css" rel="stylesheet">
 </head>
 <body>
+  <div class="embed embed-4by1">
+    <img class="embed-item" src="images/placeholder-4by1.svg" alt="4by1">
+  </div>
+  <div class="embed embed-16by9">
+    <img class="embed-item" src="images/placeholder-16by9.svg" alt="16by9">
+  </div>
+  <div class="embed embed-4by3">
+    <img class="embed-item" src="images/placeholder-4by3.svg" alt="4by3">
+  </div>
+
 
 </body>
 </html>
